--- a/pages/index.html
+++ b/pages/index.html
@@ -89,6 +89,7 @@
         </div>
      </form>
      <div>
+        <!-- Social media icons using Bootstrap -->
         <a href="#" class="text-dark me-2">
             <i class="fab fa-facebook-f fa-lg"></i>
           </a>
