css update to page 1

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SBA</title>
+    <link rel="stylesheet" href="../styles/page2.css">
     <style>
         img {
             width: 300px;
@@ -111,8 +112,32 @@
             Cool: Let the cheesecake cool completely before serving.
             Serve: Top with additional strawberry pie filling, whipped cream, and fresh strawberries, if desired.</p>
     </div>
+    <footer>
+        <div>
+         <form action="#">
+             <label>Newsletter Sign-up</label>
+             <input type="email" placeholder="Email">
+         </div>
+      </form>
+      <div>
+         <!-- Social media icons using Bootstrap -->
+         <a href="#" class="text-dark me-2">
+             <i class="fab fa-facebook-f fa-lg"></i>
+           </a>
+           <a href="#" class="text-dark me-2">
+             <i class="fab fa-twitter fa-lg"></i>
+           </a>
+           <a href="#" class="text-dark me-2">
+             <i class="fab fa-instagram fa-lg"></i>
+           </a>
+           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-zRvgC/oG/Z6d6o0/o5c71c6d077777637a4444536593833021b754972614637549705730927430232704316503672613900155713969/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      </div>
+ 
+ 
+     </footer>
 
 
     <a href="./index.html">Go Back to Home Page</a>
+    <a href="./page3.html">Go to Page 3</a>
 </body>
 </html>
