--- a/pages/page2.html
+++ b/pages/page2.html
@@ -130,7 +130,7 @@
     </div>   
       
     <div class="goku">
-        <h3>Eat to be like Goku!</h3>
+        <h3 class="goku-text">Eat to be like Goku!</h3>
         <img src="https://media3.giphy.com/media/Fh8uUS3EE9viM/giphy.gif?cid=6c09b952qqbnnbrsepkg598q9ibknhuo22egp6qbaosuyx8w&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g" alt="gif">
     </div>
     <footer>
